Refactor MaintenanceManager and MaintenanceRecord classes to enhance maintenance tracking functionality
- Updated CSV header and file handling in MaintenanceManager for additional fields.
- Introduced sample data creation when loading maintenance records.
- Enhanced MaintenanceRecord class with new fields: priority and solution.
- Improved methods for updating and completing maintenance records.
- Added new methods for retrieving maintenance statistics and filtering by priority.
- Refined ReturnForm to improve user experience and display of borrowed items.
- Implemented custom cell factory for ComboBox to show detailed borrow information.
- Updated validation and error handling in ReturnForm for better feedback.